--- a/app/src/main/res/layout/activity_link_update.xml
+++ b/app/src/main/res/layout/activity_link_update.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LinkUpdateActivity"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <Spinner
         android:id="@+id/link_update_spinner"
