--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <!-- Circular Image View  -->
     <de.hdodenhof.circleimageview.CircleImageView
