--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.QueryActivity"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <TextView
         android:layout_width="wrap_content"
