--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.RegisterActivity"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <!-- Circular Image View  -->
     <de.hdodenhof.circleimageview.CircleImageView
