--- a/app/src/main/res/layout/activity_single_view.xml
+++ b/app/src/main/res/layout/activity_single_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <com.smarteist.autoimageslider.SliderView
         android:id="@+id/slider"
