--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.UserInformationActivity"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <EditText
         android:layout_width="match_parent"
