--- a/app/src/main/res/layout/activity_view_contact_form.xml
+++ b/app/src/main/res/layout/activity_view_contact_form.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ViewContactFormActivity"
-    android:background="@mipmap/background_trial"
+    android:background="@color/screen_background"
     android:padding="10dp">
 
     <TextView
