--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.WebsiteActivity"
-    android:background="@mipmap/background_trial"
+    android:background="@color/screen_background"
     android:padding="10dp">
 
     <Spinner
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/website_button"
-        android:background="@mipmap/background_trial">
+        android:background="@color/screen_background">
 
         <Spinner
             android:id="@+id/website_fetch_spinner"
