--- a/app/src/main/res/layout/activity_website_view.xml
+++ b/app/src/main/res/layout/activity_website_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.WebsiteViewActivity"
-    android:background="@mipmap/background_trial">
+    android:background="@color/screen_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
