--- a/app/src/main/res/layout/main_grid_layout.xml
+++ b/app/src/main/res/layout/main_grid_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="20dp"
     app:cardCornerRadius="5dp"
@@ -30,7 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textStyle="bold"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            android:maxLines="1"
             android:textAlignment="center" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
